# seqpacker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  landing.html  mkdocs.yml  pyproject.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/dashboard/_file/data/: competitors.0ca075ee.json
benchmarks/dashboard/_observablehq/: client.886c1ba9.js
benchmarks/python/: bench_seqpacker.py  generate_report.py  run_benchmarks.py
benchmarks/python/datasets/: real.py  synthetic.py
benchmarks/python/metrics/: models.py
benchmarks/python/runners/: base.py  binpacking.py  greedy.py  lightbinpack.py  naive.py  prtpy.py  seqpacker.py
benchmarks/python/utils/: logging.py
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: dataset.rs  main.rs  report.rs
bindings/python/: Cargo.toml
bindings/python/src/: lib.rs  metrics.rs  pack.rs  packer.rs  strategy.rs  stream_packer.rs
crates/seqpacker/: Cargo.toml  README.md
crates/seqpacker/src/: dev.rs  engine.rs  error.rs  lib.rs  metrics.rs  pack.rs  packer.rs  sequence.rs  strategy.rs  stream.rs  validation.rs
crates/seqpacker/src/algorithms/: best_fit.rs  best_fit_decreasing.rs  counting_sort.rs  first_fit.rs  first_fit_decreasing.rs  first_fit_shuffle.rs  harmonic.rs  mod.rs  modified_first_fit_decreasing.rs  next_fit.rs  optimised_best_fit_decreasing.rs  optimised_best_fit_decreasing_parallel.rs  optimized_best_fit_decreasing.rs  optimized_best_fit_decreasing_parallel.rs  worst_fit.rs
crates/seqpacker/src/placement/: btree.rs  capacity_segment_tree.rs  linear.rs  mod.rs  segment_tree.rs
crates/seqpacker/tests/: golden.rs  proptest_packing.rs
docs/: api.md  changelog.md  contributing.md  getting-started.md  index.md  performance.md
docs/benchmarks/: algorithms.html  builds.html  index.html
docs/benchmarks/_file/data/: algorithms.e4078f4c.json  builds.aa940d03.json
docs/user-guide/: algorithms.md  batch-packing.md  numpy.md  pytorch.md  streaming.md  training.md
examples/: README.md  pytorch_training.py  sft_trainer.py
python/seqpacker/: __init__.py  __init__.pyi  hf_utils.py  torch_utils.py
tests/python/: test_bindings.py  test_hf_utils.py  test_stream_packer.py  test_torch_utils.py
tests/python/benchmarks/: test_metrics.py  test_runners.py  test_synthetic.py
