[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

# ============================================================================
# Project Metadata
# ============================================================================

[project]
name = "seqpacker"
version = "0.1.2"
description = "High-performance sequence packing library for LLM training with Rust core and Python bindings"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "AlphaKhaw", email = "alphakhaw@gmail.com" }
]
keywords = [
    "bin-packing",
    "sequence-packing",
    "llm",
    "machine-learning",
    "deep-learning",
    "transformers",
    "training",
    "optimization",
    "gpu",
    "rust",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0",
]

# ============================================================================
# Maturin
# ============================================================================

[tool.maturin]
manifest-path = "bindings/python/Cargo.toml"
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "seqpacker._core"
strip = true

# ============================================================================
# UV
# ============================================================================

[tool.uv]
cache-keys = [
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
]

# ============================================================================
# Dependency Groups
# ============================================================================

[dependency-groups]
test = [
    "maturin>=1.7",
    "pytest>=8.3",
    "pytest-cov>=5.0",
]
lint = [
    "pyright>=1.1.390",
    "pre-commit>=3.8.0",
    "ruff>=0.8",
]
bench = [
    # Data loading
    "datasets>=2.14.0",
    "torch>=2.0.0",
    "transformers>=4.43.0",
    # Competitor packing libraries
    "binpacking>=1.4.3",
    "lightbinpack>=0.1.0; sys_platform == 'linux'",
    "prtpy>=0.8.2",
    # Reporting
    "loguru>=0.7.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "pydantic>=2.0",
    "pytest-benchmark>=4.0",
    "tabulate>=0.9.0",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]

# ============================================================================
# Pytest
# ============================================================================

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============================================================================
# Ruff
# ============================================================================

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# ============================================================================
# Pyright
# ============================================================================

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
