[package]
name = "seqpacker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-performance sequence packing for LLM training"

[dependencies]
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
